// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VerticalButtonStyled /> should render the component 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "VerticalButtonStyled__VerticalTabButtonStyled-sc-8edyi5-0",
        "isStatic": false,
        "rules": Array [
          "height:44px;display:flex;flex-flow:row;align-items:center;position:relative;background-color:",
          [Function],
          ";margin-right:",
          [Function],
          ";padding:",
          [Function],
          ";outline-width:0;text-decoration:none !important;cursor:pointer;text-transform:capitalize;&:not(:first-child){margin-top:2px;}&:hover{text-decoration:none;}&:active,&:hover,&:focus{background-color:",
          [Function],
          ";}&:before{content:'';position:absolute;left:0;top:0;height:100%;width:4px;opacity:",
          [Function],
          ";background-color:",
          [Function],
          ";transition:opacity 0.3s;}",
        ],
      },
      "displayName": "VerticalButtonStyled__VerticalTabButtonStyled",
      "render": [Function],
      "styledComponentId": "VerticalButtonStyled__VerticalTabButtonStyled-sc-8edyi5-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isActive={false}
/>
`;

exports[`<VerticalButtonStyled /> should render the component with \`isActive\` prop as true 1`] = `
<StyledComponent
  forwardedClass={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "VerticalButtonStyled__VerticalTabButtonStyled-sc-8edyi5-0",
        "isStatic": false,
        "rules": Array [
          "height:44px;display:flex;flex-flow:row;align-items:center;position:relative;background-color:",
          [Function],
          ";margin-right:",
          [Function],
          ";padding:",
          [Function],
          ";outline-width:0;text-decoration:none !important;cursor:pointer;text-transform:capitalize;&:not(:first-child){margin-top:2px;}&:hover{text-decoration:none;}&:active,&:hover,&:focus{background-color:",
          [Function],
          ";}&:before{content:'';position:absolute;left:0;top:0;height:100%;width:4px;opacity:",
          [Function],
          ";background-color:",
          [Function],
          ";transition:opacity 0.3s;}",
        ],
      },
      "displayName": "VerticalButtonStyled__VerticalTabButtonStyled",
      "render": [Function],
      "styledComponentId": "VerticalButtonStyled__VerticalTabButtonStyled-sc-8edyi5-0",
      "target": "a",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isActive={true}
/>
`;
